[gd_scene load_steps=4 format=2]

[ext_resource path="res://test_ik.gd" type="Script" id=1]
[ext_resource path="res://bone.png" type="Texture" id=2]
[ext_resource path="res://star.png" type="Texture" id=3]

[node name="Root" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Joint1" type="Position2D" parent="." index="0"]

position = Vector2( 260, 320 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Bone1" type="Sprite" parent="Joint1" index="0"]

modulate = Color( 0.212158, 0.617188, 0.256458, 1 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -32, -32 )

[node name="Joint2" type="Position2D" parent="Joint1" index="1"]

position = Vector2( 210.734, 0.451233 )
_sections_unfolded = [ "Animation", "Offset", "Region", "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Bone2" type="Sprite" parent="Joint1/Joint2" index="0"]

modulate = Color( 0.294708, 0.463137, 0.679688, 1 )
texture = ExtResource( 2 )
centered = false
offset = Vector2( -32, -32 )
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="Joint3" type="Position2D" parent="Joint1/Joint2" index="1"]

position = Vector2( 207.468, -0.310181 )
_sections_unfolded = [ "Visibility" ]

[node name="Target" type="Sprite" parent="." index="1"]

modulate = Color( 0.863281, 0.83799, 0.21582, 1 )
position = Vector2( 678.298, 320 )
scale = Vector2( 0.65, 0.65 )
z_index = 1
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Control" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Info" type="Label" parent="Control" index="0"]

modulate = Color( 0.995453, 1, 0.417969, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = 17.0
margin_right = 151.0
margin_bottom = 34.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Visibility" ]

[node name="Label1" type="Label" parent="Control" index="1"]

modulate = Color( 0.691528, 0.480469, 1, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = 48.0
margin_right = 151.0
margin_bottom = 65.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Label2" type="Label" parent="Control" index="2"]

modulate = Color( 0.460938, 1, 0.898926, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = 79.0
margin_right = 151.0
margin_bottom = 96.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility" ]

[node name="Label3" type="Label" parent="Control" index="3"]

modulate = Color( 1, 0.199219, 0.199219, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 22.0
margin_top = 118.0
margin_right = 151.0
margin_bottom = 135.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Visibility" ]


